[project]
name = "video-upload-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instagrapi>=2.1.5",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "moviepy>=2.2.1",
    "playwright>=1.54.0",
    "requests>=2.32.5",
]
